<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullstackDevIdImg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AndroidDeveloper"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/fullstackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fullStackTitle"
        android:textAlignment="center"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/fullStackImg"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:contentDescription="@string/full_stack_image_fragment"
        android:src="@drawable/fullstackdev" />

    <TextView
        android:id="@+id/fullstackDescriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDescription"
        android:layout_marginStart="@dimen/marginDescription"
        android:fontFamily="sans-serif-black"
        android:text="@string/textDescriptionFullStack"
        android:textAlignment="viewStart"
        android:textSize="@dimen/textSizeDescription"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/fullstackRequirementsID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDescription"
        android:layout_marginStart="@dimen/marginDescription"
        android:fontFamily="sans-serif-black"
        android:text="@string/textRequirementsAndroid"
        android:textAlignment="textStart"
        android:textSize="@dimen/textSizeRequirements"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullstackLinkID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fulStackLink" />


</LinearLayout>